Attempt at fixing overflow

--- a/css/layout.css
+++ b/css/layout.css
@@ -13,17 +13,35 @@ header {
     font-size: 2.5em;
 }
 
+body {
+    height: 300%;
+    background-color: rgb(248, 248, 248);
+    width: 80%;
+    min-width: 640px;
+    max-width: 860px;
+    min-height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 8%;
+    padding-right: 8%;
+    border-radius: 10px;
+}
+
+body > p {
+
+}
+
 /* Navbar */
 nav#navbar {
-    padding: 0.5%;
 }
 
 /* Navbar Links */
 nav#navbar > a {
+    position: static;
     text-align: center;
     text-decoration: none;
     padding-left: 0.0%;
-    padding-right: 0.75%;
+    padding-right: 2.5%;
     font-size: 1.5em;
     color: rgb(132, 25, 25);
 
@@ -33,17 +51,4 @@ nav#navbar > a {
 
 nav#navbar > a:hover {
     font-size: 1.65em;
-}
-
-body {
-    height: 100%;
-    background-color: rgb(248, 248, 248);
-    width: 80%;
-    min-width: 640px;
-    max-width: 860px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 8%;
-    padding-right: 8%;
-    border-radius: 10px;
 }
